# er-better-menu-descriptions

./: .pre-commit-config.yaml  Cargo.toml  LICENSE_ASL2  rustfmt.toml
crates/file-readers/: Cargo.toml
crates/file-readers/src/: fmg.rs  json.rs  lib.rs  main.rs  xml.rs
crates/last_weapon/: Cargo.toml
crates/last_weapon/src/: lib.rs  retour.rs
crates/menus/: Cargo.toml
crates/menus/src/: fmg.rs  gui.rs  lib.rs
frida/: package.json
frida/agent/: index.ts
resources/: item_ids.txt
resources/animations/: wild-strikes.events.activeFrames.json  wild-strikes.events.json  wild-strikes.json
resources/item-msgbnd-dcx/: MagicCaption.fmg.xml  MagicName.fmg.xml  ProtectorCaption.fmg.xml  WeaponCaption.fmg.xml  _witchy-bnd4.xml
resources/item_custom-msgbnd-dcx/: ArtsCaption.fmg.xml
resources/item_dlc01-msgbnd-dcx/: ArtsCaption.fmg.xml  GemCaption.fmg.xml  GemInfo.fmg.xml  GoodsCaption.fmg.xml  GoodsInfo2.fmg.xml  GoodsInfo2_dlc01.fmg.xml  GoodsInfo_dlc01.fmg.xml  GoodsName.fmg.xml  ProtectorCaption_dlc01.fmg.xml  ProtectorInfo.fmg.xml  ProtectorName.fmg.xml  WeaponCaption_dlc01.fmg.xml  WeaponEffect.fmg.xml  _witchy-bnd4.xml
resources/item_dlc02-msgbnd-dcx/: AccessoryCaption.fmg.xml  AccessoryInfo.fmg.xml  AccessoryName.fmg.xml  ArtsCaption_dlc01.fmg.xml  ArtsName.fmg.xml  GemEffect.fmg.xml  GemName.fmg.xml  GoodsCaption_dlc01.fmg.xml  GoodsDialog.fmg.xml  GoodsInfo.fmg.xml  MagicInfo.fmg.xml  NpcName.fmg.xml  NpcName_dlc01.fmg.xml  PlaceName.fmg.xml  WeaponEffect_dlc01.fmg.xml  WeaponInfo.fmg.xml  WeaponName.fmg.xml  _witchy-bnd4.xml
resources/menu-msgbnd-dcx/: EventTextForTalk.fmg.xml  GR_Dialogues.fmg.xml  GR_KeyGuide.fmg.xml  GR_LineHelp.fmg.xml  GR_System_Message_win64.fmg.xml  MovieSubtitle.fmg.xml  TextEmbedImageName_win64.fmg.xml  TutorialTitle.fmg.xml  _witchy-bnd4.xml
resources/menu_dlc01-msgbnd-dcx/: EventTextForMap.fmg.xml  LoadingText.fmg.xml  TalkMsg.fmg.xml  TutorialBody_dlc01.fmg.xml  _witchy-bnd4.xml
resources/menu_dlc02-msgbnd-dcx/: ActionButtonText.fmg.xml  BloodMsg.fmg.xml  GR_System_Message_win64_dlc01.fmg.xml  LoadingTitle.fmg.xml  NetworkMessage.fmg.xml  ToS_win64.fmg.xml  TutorialBody.fmg.xml  _witchy-bnd4.xml
resources/ngword-msgbnd-dcx/: GR_NGWord.fmg.xml  _witchy-bnd4.xml
