[workspace]
resolver = "2"
members = ["crates/file-readers", "crates/menus", "crates/last_weapon"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[profile.dev]
opt-level = 0
lto = true
panic = "unwind"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
crash-handler = "0.6"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
strum = "0.27"
strum_macros = "0.27"

[workspace.lints.rust]

[workspace.lints.rustdoc]

[workspace.lints.clippy]
