[package]
name = "last_weapon"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = false
description = "The library used to view the last selected weapon."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
eldenring = { git = "https://github.com/vswarte/eldenring-rs.git", branch = "main" }
eldenring-util = { git = "https://github.com/vswarte/eldenring-rs.git", branch = "main" }
retour = { version = "*", features = ["static-detour"] }
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
tracing.workspace = true
tracing-subscriber.workspace = true