[package]
name = "menus"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = false
description = "The core library used to manipulate menu data."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pmod = { version = "0.1", git = "https://github.com/Dasaav-dsv/pmod.git" }
windows = { version = "0.54", features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemServices",
] }
eldenring = { git = "https://github.com/vswarte/eldenring-rs.git", branch = "main" }
eldenring-util = { git = "https://github.com/vswarte/eldenring-rs.git", branch = "main" }
hudhook = "*"
chrono = "*"
pollster = "0.3"
pelite = "0.10"
uuid = { version = "1.16.0", features = ["v4"] }
last_weapon = { version = "0.1.0", path = "../last_weapon" }
tracing.workspace = true
tracing-subscriber.workspace = true
crash-handler.workspace = true
serde.workspace = true
serde_json.workspace = true